attempt fix for footer issue on safari

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -22,18 +22,28 @@ in case I want to change colour themes. */
     color: var(--text);
     background-color: var(--background);
     font-family: 'Noto Serif', serif;
+    box-sizing: border-box;
 }
 
 html {
+    height: 100%;
     scroll-behavior: smooth;
 }
 
-/* Thank you to @smashtheshell on Youtube for giving the idea
-on how to make a sticky footer. Full citation in credits. */
-
 body {
     font-size: 100%;
-    height: 100vh;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+main {
+    margin: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 section {
@@ -83,24 +93,33 @@ in credits of README */
 /* Styling for Navigation Bar */
 
 nav {
-    margin: 0 5%;
+    margin: 0;
     display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+nav div {
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
 
 .logo {
+    margin-left: 5vw;
+    margin-right: auto;
     font-size: 3em;
     color: var(--logo-emphasis);
 }
 
-nav div{
-    margin: 0;
+nav div div {
+    margin-right: 5vw;
     display: flex;
     flex-direction: row;
 }
 
-nav div a, nav div p {
+nav div div a, nav div div p {
     margin: 0 5px;
     font-size: 1.1em;
     padding: 2px 7px;
@@ -111,7 +130,7 @@ nav div a, nav div p {
 the text-underline-offset style rule. full citation in
 credits of README. */
 
-nav div a:hover {
+nav div div a:hover {
     text-underline-offset: 6px;
     text-decoration: underline;
 }
@@ -125,8 +144,8 @@ nav div a:hover {
 hr {
     height: 2px;
     background-color: var(--placeholder);
-    width: 99%;
-    margin: auto;
+    width: calc(100% - 20px);
+    align-self: center;
 }
 
 /* styling for Section 1 of index.html (landing page) */
@@ -217,14 +236,11 @@ hr {
 /* Styling for the Footer */
 
 footer {
-    bottom: 0px;
-    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    position: sticky;
-    top: 100%;
+    margin-top: auto;
 }
 
 footer div{
@@ -418,13 +434,11 @@ form {
 }
 
 #school-year, #exam-board {
-    margin-left: -7px;
-    margin-right: 7px;
+    margin-right: 3px;
 }
 
 #contact-time, #level-studying {
-    margin-right: -7px;
-    margin-left: 7px;
+    margin-left: 3px;
 }
 
 /* Right side of Contact Form */
@@ -437,7 +451,7 @@ textarea {
     border: 2px solid #565254 ;
     border-radius: 5px;
     width: 100%;
-    height: 245px;
+    height: 260px;
     padding: 5px;
     margin-bottom: -5px;
     margin-right: 20px;
@@ -599,28 +613,28 @@ a:active {
 /* Media Queries for Navigation Bar */
 
 @media only screen and (max-width : 809px) {
-    nav {
+    nav div {
         display: flex;
         flex-direction: column;
     }
 
-    nav div {
+    nav div div {
         margin: 20px 0;
     }
 }
 
 @media only screen and (max-width : 419px) {
-    nav {
+    nav div {
         margin: 0 0.5%;
     }
 
-    nav div{
+    nav div div {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
     }
 
-    nav div a, nav div p {
+    nav div div a, nav div div p {
         font-size: 5vw;
         margin: 0;
         padding: 0 5px;
@@ -628,7 +642,7 @@ a:active {
 }
 
 @media only screen and (max-width : 319px) {
-    nav div a, nav div p {
+    nav div div a, nav div div p {
         font-size: 1em;
     }
 }
@@ -637,6 +651,8 @@ a:active {
 
 @media only screen and (max-width : 1199px) {
     #home-landing {
+        width: 100%;
+        padding: 0;
         flex-direction: column-reverse;
         align-items: center;
     }
@@ -647,11 +663,13 @@ a:active {
     }
 
     .home-landing-right {
+        padding: 0 2%;
         width: 100%;
         margin-bottom: 80px;
     }
 
     .home-landing-left {
+        padding: 0 2%;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
@@ -753,7 +771,6 @@ a:active {
 
     .form-right-side textarea{
         margin-right: 0;
-        margin-left: -8px;
         margin-top: 2px;
     }
 
